--- a/projects/project-styles.css
+++ b/projects/project-styles.css
@@ -35,7 +35,8 @@
     display: block;
     margin: 0 auto;
     width: fit-content;
-    padding: 20px;
+    padding: 25px;
+    overflow: scroll;
 }
 
 .library {
@@ -64,9 +65,9 @@
 
 @keyframes shake-rotate {
     0% { transform: rotate(0deg); }
-    25% { transform: rotate(2deg); }
+    25% { transform: rotate(1deg); }
     50% { transform: rotate(0deg); }
-    75% { transform: rotate(-2deg); }
+    75% { transform: rotate(-1deg); }
     100% { transform: rotate(0deg); }
 }
 
