--- a/image-slider.css
+++ b/image-slider.css
@@ -22,23 +22,27 @@
 
 .arrow {
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bolder;
     font-size: 35px;
     font-weight: bold;
     color: white; 
     background-color: #c1c1c1;
     padding-top: 8px;
-    padding-bottom: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-bottom: 12px;
+    padding-left: 18px;
+    padding-right: 18px;
     border-radius: 50%;
     cursor: pointer;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    transition: font-size 0.3s ease;
+    transition: box-shadow 0.3 ease;
 }
 
 .arrow:hover {
-    filter: brightness(0.8);
+    filter: brightness(0.95);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    font-size: 40px;
 }
 
 .arrow-left {
