--- a/index.css
+++ b/index.css
@@ -62,7 +62,7 @@
     border-radius: 10px;
     background-color: #cecece;
     border: 1px solid;
-    border-color: #c1c1c1;
+    border-color: #656565;
     overflow: hidden;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
