--- a/skills.css
+++ b/skills.css
@@ -1,6 +1,7 @@
 .section-title {
     padding: 10px;
     background-color: #f3f3f3;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
 }
 
 .section-title h2 {
@@ -25,6 +26,8 @@
     padding: 10px;
     border-radius: 15px;
     background-color: #d6d6d6;
+    border: 1px solid; 
+    border-color: #4d4d4d;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
