--- a/index.css
+++ b/index.css
@@ -19,26 +19,6 @@
     padding: 20px;
 }
 
-.footer {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-    background: #ddd;
-    overflow: scroll;
-}
-
-.footer img{
-    max-width: 40px;
-    max-height: 40px;
-}
-
-.footer h3{
-    margin: 0;
-    margin-left: 15px;
-}
-
 @media screen and (max-width: 700px) {
     .row {   
         flex-direction: column;
@@ -65,6 +45,7 @@
     border-color: #656565;
     overflow: hidden;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    font-family: 'Roboto Slab';
 }
 
 .education-container h4 {
@@ -79,6 +60,7 @@
 .university-container {
     width: fit-content;
     text-align: center;
+    font-family: 'Roboto Slab';
 }
 
 .university-container img{
