--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    font-family: 'Roboto Slab';
+    font-family: 'Verdana';
     margin: 0;
 }
 
@@ -39,4 +39,25 @@ body {
 .navbar a:hover {
     background-color: #ddd;
     color: black;
+}
+
+.footer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    background: #ddd;
+    overflow: scroll;
+    font-family: 'Roboto Slab';
+}
+
+.footer img{
+    max-width: 40px;
+    max-height: 40px;
+}
+
+.footer h3{
+    margin: 0;
+    margin-left: 15px;
 }
