--- a/image-slider.css
+++ b/image-slider.css
@@ -3,12 +3,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: fit-content;
-    margin-top: 23%;
+    height: 350px;
 }
 
 .image-slider img {
-    width: 60%;
+    max-height: 100%;
+    max-width: 60%;
     position: absolute;
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
@@ -22,10 +22,9 @@
 
 .arrow {
     position: absolute;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Verdana';
     font-weight: bolder;
     font-size: 35px;
-    font-weight: bold;
     color: white; 
     background-color: #c1c1c1;
     padding-top: 8px;
@@ -46,9 +45,9 @@
 }
 
 .arrow-left {
-    left: 50px;
+    left: 8%;
 }
 
 .arrow-right {
-    right: 50px;
+    right: 8%;
 }   
