--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,8 @@ body {
     padding: 20px;
     background: #ddd;
     overflow: scroll;
-    font-family: 'Roboto Slab';
+    font-family: "Monaco";
+    font-size: small;
 }
 
 .footer img{
