--- a/code.css
+++ b/code.css
@@ -18,7 +18,7 @@
     background-color: #e4e4e0;
     border: solid 2px;
     border-color: #d4d4d4;
-    overflow: scroll;
+    overflow: auto;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
@@ -53,7 +53,6 @@
     width: fit-content;
     background-color: #ebebeb;
     font-family: monospace;
-    box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
 }
 
 .code-chunk p {
