--- a/contact.css
+++ b/contact.css
@@ -8,10 +8,8 @@
     min-height: 600px;
     height: fit-content;
     border-radius: 15px;
-    border: 2px solid;
-    border-color: #cecece;
     background-color: #e7e7e7;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
     font-family: 'Roboto Slab';
 }
 
@@ -95,7 +93,7 @@
     border-radius: 5px;
     border: 2px solid;
     border-color: #cdcdcd;
-    overflow: scroll;
+    overflow: auto;
 }
 
 #message {
