--- a/styles.css
+++ b/styles.css
@@ -47,8 +47,8 @@ body {
     align-items: center;
     justify-content: center;
     padding: 20px;
-    background: #ddd;
-    overflow: scroll;
+    overflow: auto;
+    background: #cecece;
     font-family: "Monaco";
     font-size: small;
 }
@@ -61,4 +61,14 @@ body {
 .footer h3{
     margin: 0;
     margin-left: 15px;
+}
+
+.section-divider {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
+}
+
+.tab {
+    padding-left: 30px;
 }
