--- a/index.css
+++ b/index.css
@@ -130,10 +130,15 @@
     text-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
 }
 
-.marathon-img {
+.marathon {
     display: inline-block;
     margin: 20px;
-    max-height: 150px;
     border-radius: 10px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    transition: filter 0.3s;
+}
+
+.marathon img {
+    max-height: 150px;
+    border-radius: 10px;
 }
