--- a/projects.css
+++ b/projects.css
@@ -67,3 +67,21 @@
     padding: 10px;
     text-align: center;
 }
+
+.item-widget {
+    margin: 20px;
+    background-color: #f3f3f3;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
+    width: 70px;
+    height: 70px;
+    position: absolute;
+    border-radius: 50%;
+    bottom: -35px;
+    right: -35px;
+}
+
+.item-widget img {
+    margin: 10px;
+    width: 50px;
+    height: 50px;
+}
