--- a/skills.css
+++ b/skills.css
@@ -36,6 +36,10 @@
 
 .skill.flip::before {
     content: attr(experience);
+    font-size: 15px;
+    color: white;
+    font-weight: 700;
+    text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
     position: absolute;
     top: 0;
     left: 0;
