--- a/projects.css
+++ b/projects.css
@@ -85,3 +85,20 @@
     width: 50px;
     height: 50px;
 }
+
+.date {
+    padding: 5px;
+    padding-right: 15px;
+    padding-left: 15px;
+    background-color: #a3a3a3;
+    color: white;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
+    border: 0.5px solid; 
+    border-color: #5a5a5a;
+    width: fit-content;
+    height: fit-content;
+    position: absolute;
+    border-radius: 35px;
+    top: -15px;
+    left: -20px;
+}
